fix: overflow in rest of site

--- a/components/Education.module.scss
+++ b/components/Education.module.scss
@@ -5,4 +5,5 @@
   background-size: cover;
   color: #333333;
   font-size: 1.3em;
+  overflow-x: hidden;
 }
