--- a/components/Skills.module.scss
+++ b/components/Skills.module.scss
@@ -5,6 +5,7 @@
   background-size: cover;
   color: #333333;
   font-size: 1.3em;
+  overflow-x: hidden;
 }
 
 .group {
